<resources>
    <string name="app_name">Mini_Bank</string>
    <string name="identification">Identifient</string>
    <string name="password">Mot De Passe</string>
    <string name="forget_password">Mot de passe oublié?</string>
    <string name="connexion">Connexion</string>
    <string name="one">1</string>
    <string name="welcome">Bienvenue</string>
    <string name="welcome_description">sur fawri digital banking\nApp</string>
    <string name="client_id">Identifiant client</string>
    <string name="login">Connexion</string>
    <string name="forgot_password_question">Mot de passe oublié ?</string>
    <string name="my_accounts">Mes comptes</string>
    <string name="my_cards">Mes cartes</string>
    <string name="my_checks">Mes chèques</string>
    <string name="my_beneficiaries">Mes bénéficiaires</string>
    <string name="transfer">Virment</string>
    <string name="billing">Paiement de facture</string>
    <string name="my_samples">Mes prélèvement</string>
    <string name="rib_edition">Édition RIB</string>
    <string name="currentLanguage">Français</string>
    <string name="logout">Se déconnecter</string>
    <string name="account_number_2points">N° DE COMPTE :</string>
    <string name="balance_2points">Solde :</string>
    <string name="blocking">Blocage</string>
    <string name="opposition">Opposition</string>
    <string name="card_balance">Solde sur carte</string>
    <string name="currency">MAD</string>
    <string name="my_operations">Mes Opérations</string>
    <string name="history">Historique</string>
    <string name="statistic">Statistiques</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today">Aujourd\'hui</string>
    <string name="credit">Crédit</string>
    <string name="debit">Débit</string>
    <string name="accounts">Comptes</string>
    <string name="cards">Cartes</string>
    <string name="payment">Paiement</string>
    <string name="opinion">Avis</string>
    <string name="mes_virements">Mes Virements</string>
    <string name="mes_factures">Mes Factures</string>
    <string name="mon_profil">Mon profil</string>
    <string name="mon_conseiller">Mon Conseiller</string>
    <string name="mention_legal">Mention Legal</string>
    <string name="text_infos">"Pour redéfinir votre mot de passe,vous porions de rensigner les informations suivantes: \n       "</string>
    <string name="text1step2">Veuillez choisir et répondre à la question secrète :</string>
    <string name="text2step2">Vous n\'avez pas recu le code ?</string>
    <string name="text3step3">Renvoyer le SMS</string>
    <string name="txt1step3">Veuillez choisir et répondre à la question secrète</string>
    <string name="txt2step3">Votre Question secrète</string>
    <string name="txt1step4">Veuiller définir votre mot de passe</string>
    <string name="txt_activation">Pour redéfinir votre mot de passe,vous porions de rensigner les informations suivantes:</string>
    <string name="header_Act">Activation du compte\n</string>
    <string name="Virement">Mes Virements</string>
    <string name="Historique">Historique</string>
    <string name="confirmer_virement">Confirmez qu\'il s\'agit bien de vous en introduisant votre mot de passe</string>
    <string name="Dexonnexion">Déconnexion</string>
    <string name="about">A propos</string>
    <string name="langue_choice">Choix de langue</string>
    <string name="acivation">Activation du compte</string>
    <string name="ok">OK</string>
    <string name="cancel">Annuler</string>
    <string name="error_system">system error !</string>
    <string name="error_no_internet">mrci de verifier votre connexion internet</string>
    <string name="error_forbiden">vous etes non autorier</string>
    <string name="error_server">erreur au niveau de serveur</string>
    <string name="error_password_empty">Merci de saisire votre mot de passe</string>
    <string name="error_user_num_empty">Merci de saisire votre numero</string>
    <string name="error_auth_failed">auth failed</string>
    <string name="account_error">Erreur de récupération des comptes</string>
    <string name="transaction_error">Erreur de récupération des transactions</string>
    <string name="sponsor_error">Erreur de récupération des publicités</string>
    <string name="facture_error">une erreur s\'est produite lors du téléchargement de vos facture, merci de patienter</string>

    <string-array name="spinner_statistics">
        <item>Mois</item>
        <item>Semaine</item>
        <item>Année</item>
    </string-array>
    <string-array name="operator_array">
        <item>Operator 1</item>
        <item>Operator 2</item>
        <item>Operator 3</item>
    </string-array>


</resources>