<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/_9sdp">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/burger_menu"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_mini_bank"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/clientId"
            android:layout_width="match_parent"
            android:text="@string/identification"
            android:layout_height="@dimen/_35sdp"
            android:textColor="@color/gray2"
            android:background="@color/transparent"
            android:fontFamily="sans-serif-medium"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/gray"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_width="match_parent"
            android:text="@string/password"
            android:layout_height="@dimen/_35sdp"
            android:textColor="@color/gray2"
            android:background="@color/transparent"
            android:fontFamily="sans-serif-medium"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/gray"/>
        <com.b3g.fawri.minibank.widgets.keyboard.CustomKeyboard
            android:id="@+id/keyboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_connexion"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_37sdp"
            android:text="@string/connexion"
            android:textColor="@color/white"
            android:background="@drawable/button_shape"
            android:layout_margin="@dimen/_12sdp"
            android:textSize="@dimen/_15sdp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue2"
            android:background="@color/transparent"
            android:text="@string/forget_password"
            android:textStyle="bold"

            />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>